# data-nature

./: .env.example  .gitignore  Northern_Israel_NDVI_LST.ipynb  STATUS.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml  keep-alive.yml
.streamlit/: config.toml
app/: Home.py  ui.py
app/pages/: 1_Heatmap.py  2_Anomalies.py  3_Simulator.py  4_Optimization.py  5_Forecast.py  6_Reports.py  7_RAG.py
data/mock/: anomalies.csv  generate_anomalies.py  generate_forecast.py  generate_heatmap.py  lst_forecast.csv  lst_history.csv  lst_timeseries.csv  model_metrics.csv  site_locations.csv  site_monthly.csv
data/processed/: anomalies.csv  lst_forecast.csv  lst_history.csv  lst_timeseries.csv  master_raw.csv  model_metrics.csv  sanity_report.json  site_baselines.csv  site_locations.csv  site_monthly.csv
docs/: PAGES_GUIDE.md  PROJECT_METHODOLOGY.md  SPRINT_PLAN_31May-21Jun.md  VISUALIZATION_PLAN.md
notebooks/: HW2_DataNature_spatial.ipynb  eda.ipynb
scripts/: dn_a0_prepare_data.py  transform_to_processed.py
src/data_nature/: __init__.py
src/data_nature/ingest/: __init__.py  earth_engine.py
src/data_nature/models/: __init__.py  cellular_automaton.py  ecology.py  forecast.py  lstm.py  optimization.py
src/data_nature/rag/: __init__.py  loader.py  retriever.py
src/data_nature/reports/: generator.py
src/data_nature/stats/: __init__.py  anomaly.py  baselines.py  regression.py  spatial.py
src/data_nature/viz/: __init__.py  charts.py  maps.py
tests/: test_baselines.py  test_earth_engine.py  test_ecology_a.py  test_forecast.py  test_lstm.py  test_optimization.py  test_reports.py  test_simulator.py  test_smoke.py  test_stats.py
venv312/: pyvenv.cfg
venv312/Scripts/: activate  activate.bat
