[project]
name = "data-nature"
version = "0.1.0"
description = "Vegetation health monitoring and heat anomaly detection for Northern Israel"
authors = [
    { name = "Alaa Barazi" },
    { name = "Ahmad Tawil" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    # --- data layer ---
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "geopandas>=0.14",
    "xarray>=2024.3",
    "rioxarray>=0.15",
    "shapely>=2.0",
    # --- satellite ingest ---
    "earthengine-api>=0.1.400",
    "geemap>=0.32",
    # --- statistics & ecological models ---
    "scipy>=1.13",
    "statsmodels>=0.14",
    # --- machine learning ---
    "scikit-learn>=1.4",
    "torch>=2.2",
    # --- visualization ---
    "plotly>=5.20",
    "matplotlib>=3.8",
    "folium>=0.16",
    "streamlit>=1.33",
    "streamlit-folium>=0.20",
    # --- reports ---
    "reportlab>=4.1",
    # --- RAG ---
    "pypdf>=4.0",
    # --- misc ---
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "tqdm>=4.66",
    "google-genai>=2.3.0",
    "chromadb>=1.5.9",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_nature"]

# ---------- tooling config ----------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
